# RAG-multimodal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
migrate/: init.py
src/: main.py
src/adapters/: gemini_adapters.py  local_adapters.py  openai_adapters.py  postgres_adapters.py  stt_adapters.py
src/application/: audio_processor.py  image_processor.py  rag_orchestrator.py  video_processor.py
src/domain/: models.py
src/infrastructure/: audio_analyzer.py  scene_detector.py
src/ports/: interfaces.py
